--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -6,5 +6,22 @@
     {{- block "main" . }}{{- end }}
     {{- partial "kko-footer.html" . -}}
     {{- partial "kko-open-links-external.html" . -}}
+    
+
+    <!-- Search Overlay -->
+    <div id="kko-search-overlay" class="kko-search-overlay">
+      <div class="kko-search-container">
+        <div class="kko-search-header">
+          <div class="kko-search-input-wrapper">
+            <input type="search" id="kko-search-input" placeholder="Suchen..." class="kko-search-input" autocomplete="off">
+            {{ $searchIcon := resources.Get "images/icons/search.png" }}
+            {{ if $searchIcon }}
+              <img src="{{ $searchIcon.RelPermalink }}" alt="Search" class="kko-search-input-icon">
+            {{ end }}
+          </div>
+        </div>
+        <div id="kko-search-results" class="kko-search-results"></div>
+      </div>
+    </div>
 </body>
 </html>
