--- a/assets/scss/_kko-header.scss
+++ b/assets/scss/_kko-header.scss
@@ -18,6 +18,7 @@ header.kko-header {
     display: none;
   }
 
+
   .kko-pulldown-menu {
     display: block;
     position: absolute;
@@ -73,6 +74,45 @@ header.kko-header {
     &:not(.kko-header-active).kko-menu-page-inserted .kko-bookmark {
       display: none;
     }
+  }
+
+  .kko-search-toggle {
+    width: 5cqw; // Smaller size
+    right: 20cqw; // Move further left
+    display: block;
+    position: absolute;
+    height: 0;
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    margin-top: 6cqw; // Push down to align with search field icon
+
+    @media (min-width: $breakpoint-small) {
+      width: 2cqw; // Smaller size on desktop
+      right: 12cqw; // Move further left on desktop
+      margin-top: 3cqw; // Push down on desktop
+    }
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  // Make search toggle white when bookmark menu is active
+  body.kko-bookmark-active header.kko-header .kko-search-toggle img {
+    filter: invert(1) brightness(100%); // Force white icon on menu page
+  }
+  
+  // Make search toggle black by default
+  .kko-search-toggle img {
+    filter: none; // Black icon by default
+  }
+
+  // Make search toggle white when there's a kko-menu anywhere in the document
+  html:has(.kko-menu) .kko-search-toggle img {
+    filter: invert(1) brightness(100%); // White icon when menu is on page
   }
 
   .kko-bookmark {
