Back to Homepage from header

--- a/layouts/_partials/single-page-header.html
+++ b/layouts/_partials/single-page-header.html
@@ -1,5 +1,5 @@
 <div class="kko-single-page-header">
-<a href=".." class="uk-link-reset">
+<a href="/" class="uk-link-reset">
 {{ partial "get-svg.html"
     (dict
         "path" "images/kko-logo-and-name-color.svg"
