--- a/layouts/_partials/render-team-card.html
+++ b/layouts/_partials/render-team-card.html
@@ -25,9 +25,9 @@
 <div class="uk-card uk-card-default uk-card-hover">
   {{ if $finalImage }}
     <div class="uk-card-media-top">
-      <a href="{{ $finalImage.RelPermalink }}">
+      <!-- <a href="{{ $finalImage.RelPermalink }}"> -->
         <img src="{{ $finalImage.RelPermalink }}" alt="{{ $firstname }} {{ $lastname }}" />
-      </a>
+      <!-- </a> -->
     </div>
   {{ end }}
   <div class="uk-card-body {{ if $cardColor }}kko-color-{{ $cardColor }}{{ end }}">
