--- a/layouts/team/single.html
+++ b/layouts/team/single.html
@@ -3,7 +3,7 @@
 {{ partial "single-page-header.html" . }}
 <div class="uk-container">
     <div class="kko-team-content kko-single-page-content">
-        <h1 class="kko-team-title kko-single-page-title">{{ .Title }}</h1>
+        <!-- <h1 class="kko-team-title kko-single-page-title">{{ .Title }}</h1> -->
         {{ .Content }}
         {{ if .Params.Filter }}
         {{ partial "render-team-grid.html" (dict "siteFilter" .Params.Filter "Site" .Site "Titel" .Title ) }}
