--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -6,7 +6,8 @@
     {{- block "main" . }}{{- end }}
     {{- partial "kko-footer.html" . -}}
     {{- partial "kko-open-links-external.html" . -}}
-    
+    {{- partial "landscape-warning.html" . -}}
+
 
     <!-- Search Overlay -->
     <div id="kko-search-overlay" class="kko-search-overlay">
